--- a/style.css
+++ b/style.css
@@ -1,328 +1,417 @@
 /* MADE WITH LOVE BY AL NAHIAN | Portfolio: https://alnahian2003.github.io/me | Behance: https://behance.net/alnahian2003 | Github: https://github.com/alnahian2003 */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat',
-        sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-    background-color: #fafafa;
-    font-family: 'Montserrat',
-        sans-serif;
-    margin: 30px auto;
-    color: #3e3e3e;
+  background-color: #fafafa;
+  font-family: "Montserrat", sans-serif;
+  margin: 30px auto;
+  color: #3e3e3e;
 }
 
 body::-webkit-scrollbar {
-    width: 8px !important;
+  width: 8px !important;
 }
 
 body::-webkit-scrollbar-track {
-    background: 0 0;
+  background: 0 0;
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #777777;
-    outline: 0;
-    border-radius: 50px;
+  background-color: #777777;
+  outline: 0;
+  border-radius: 50px;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-    background-color: #3e3e3e;
+  background-color: #3e3e3e;
 }
 
-
 h1 {
-    color: #ef0722;
-    text-align: center;
-    font-weight: 700;
-    font-size: 72px;
-
+  color: #ef0722;
+  text-align: center;
+  font-weight: 700;
+  font-size: 72px;
 }
 
 h3 {
-    color: #3e3e3e;
-    text-align: center;
-    font-weight: 700;
-    font-size: 36px;
+  color: #3e3e3e;
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
 }
 
 .alert {
-    background: -moz-linear-gradient(left, #ef0722 0%, #f83515 100%);
-    background: -webkit-linear-gradient(left, #ef0722 0%, #f83515 100%);
-    background: #ef0722;
-    background: linear-gradient(to right, #ef0722 0%, #f83515 100%);
-    color: #fff;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef0722', endColorstr='#f83515', GradientType=1);
-    text-align: center;
-    width: 300px;
-    padding: 20px 10px;
-    font-weight: 600;
-    border-radius: 5px;
-    margin: auto;
-    position: absolute;
-    bottom: 0%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation: .5s slideDown;
-    z-index: 100;
-    box-shadow: 0 10px 30px -16px #ef0722;
-    display: none;
-    cursor: pointer;
-    user-select: none;
+  background: -moz-linear-gradient(left, #ef0722 0%, #f83515 100%);
+  background: -webkit-linear-gradient(left, #ef0722 0%, #f83515 100%);
+  background: #ef0722;
+  background: linear-gradient(to right, #ef0722 0%, #f83515 100%);
+  color: #fff;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef0722', endColorstr='#f83515', GradientType=1);
+  text-align: center;
+  width: 300px;
+  padding: 20px 10px;
+  font-weight: 600;
+  border-radius: 5px;
+  margin: auto;
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: 0.5s slideDown;
+  z-index: 100;
+  box-shadow: 0 10px 30px -16px #ef0722;
+  display: none;
+  cursor: pointer;
+  user-select: none;
 }
 
 @keyframes slideDown {
-    0% {
-        bottom: -10%;
-    }
+  0% {
+    bottom: -10%;
+  }
 
-    100% {
-        bottom: 0%;
-    }
+  100% {
+    bottom: 0%;
+  }
 }
 
 .container {
-    border-radius: 10px;
-    filter: drop-shadow(0 10px 15px #00000010);
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    margin: 30px auto;
-    width: 500px;
+  border-radius: 10px;
+  filter: drop-shadow(0 10px 15px #00000020);
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  margin: 30px auto;
+  width: 500px;
 }
 
 .form-container {
-    display: none;
-    transition: height 350ms ease-in-out,
-        opacity 750ms ease-in-out;
+  display: none;
+  transition: height 350ms ease-in-out, opacity 750ms ease-in-out;
 }
 
 .add-form {
-    display: flex;
+  display: flex;
 }
 
 #input {
-    display: block;
-    border-radius: 10px;
-    border: 2px solid #dadada;
-    border-right: 1px solid transparent;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    color: #3e3e3e;
-    font-size: 18px;
-    margin: 10px auto;
-    outline: none;
-    padding: 15px;
-    width: 100%;
+  display: block;
+  border-radius: 10px;
+  border: 2px solid #dadada;
+  border-right: 1px solid transparent;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  color: #3e3e3e;
+  font-size: 18px;
+  margin: 10px auto;
+  outline: none;
+  padding: 15px;
+  width: 100%;
 }
 
 #input:focus {
-    border: 2px solid #ef0722;
-    border-right: 1px solid transparent;
-    transition: .3s ease;
+  border: 2px solid #ef0722;
+  border-right: 1px solid transparent;
+  transition: 0.3s ease;
 }
 
 #submit {
-    background-color: #ef0722;
-    border: 2px solid transparent;
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: 700;
-    margin: 10px auto;
-    outline: none;
-    padding: 15px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+  background-color: #ef0722;
+  border: 2px solid transparent;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 10px auto;
+  outline: none;
+  padding: 15px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 #submit:hover {
-    border: 2px solid #dadada;
-    background-color: #fff;
-    color: #ef0722;
-    cursor: pointer;
-    transition: .3s ease;
+  border: 2px solid #dadada;
+  background-color: #fff;
+  color: #ef0722;
+  cursor: pointer;
+  transition: 0.3s ease;
 }
 
 #submit:active {
-    border: 2px solid #ef0722;
-    color: #ef0722;
-    background-color: #fff;
+  border: 2px solid #ef0722;
+  color: #ef0722;
+  background-color: #fff;
 }
 
 ::placeholder {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .head {
-    align-items: center;
+  align-items: center;
 
-    background: -moz-linear-gradient(left, #ef0722 0%, #f83515 100%);
-    background: -webkit-linear-gradient(left, #ef0722 0%, #f83515 100%);
-    background: #ef0722;
-    background: linear-gradient(to right, #ef0722 0%, #f83515 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef0722', endColorstr='#f83515', GradientType=1);
+  background: -moz-linear-gradient(left, #ef0722 0%, #f83515 100%);
+  background: -webkit-linear-gradient(left, #ef0722 0%, #f83515 100%);
+  background: #ef0722;
+  background: linear-gradient(to right, #ef0722 0%, #f83515 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef0722', endColorstr='#f83515', GradientType=1);
 
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    color: #ffffff;
-    display: inline-flex;
-    flex-flow: row;
-    justify-content: space-between;
-    padding: 20px;
-    text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: #ffffff;
+  display: inline-flex;
+  flex-flow: row;
+  justify-content: space-between;
+  padding: 20px;
+  text-align: center;
 }
 
 .date {
-    float: left;
-    text-align: left;
-    user-select: none;
-    font-size: 18px;
-    width: 33%;
-    font-weight: 600;
+  float: left;
+  text-align: left;
+  user-select: none;
+  font-size: 18px;
+  width: 33%;
+  font-weight: 600;
 }
 
 .add {
-    width: 33%;
+  width: 33%;
 }
 
 .add svg {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .time {
-    float: right;
-    text-align: right;
-    user-select: none;
-    font-size: 18px;
-    width: 33%;
-    font-weight: 600;
+  float: right;
+  text-align: right;
+  user-select: none;
+  font-size: 18px;
+  width: 33%;
+  font-weight: 600;
 }
 
 .pad {
-    background-color: #fff;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    color: #757575;
-    height: 400px;
-    overflow: auto;
-    position: relative;
+  background-color: #fff;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  color: #757575;
+  height: 400px;
+  overflow: auto;
+  position: relative;
 }
 
 .pad::-webkit-scrollbar {
-    width: 8px !important;
+  width: 8px !important;
 }
 
 .pad::-webkit-scrollbar-track {
-    background: 0 0;
+  background: 0 0;
 }
 
 .pad::-webkit-scrollbar-thumb {
-    background-color: #777777;
-    outline: 0;
-    border-radius: 50px;
+  background-color: #777777;
+  outline: 0;
+  border-radius: 50px;
 }
 
 .pad::-webkit-scrollbar-thumb:hover {
-    background-color: #3e3e3e;
+  background-color: #3e3e3e;
 }
 
 ::selection {
-    background-color: #ef0722 !important;
-    color: #fff !important;
+  background-color: #ef0722 !important;
+  color: #fff !important;
 }
 
 .placeholder {
-    position: absolute;
-    color: #777777;
-    margin: 100px auto;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    user-select: none;
-    text-align: center;
-
+  position: absolute;
+  color: #777777;
+  margin: 100px auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  user-select: none;
+  text-align: center;
 }
 
 .placeholder h4 {
-    color: #77777780;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  color: #77777780;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #todo ul li {
-    background-color: #fff;
-    list-style-type: none;
-    border-bottom: .5px solid #dadada;
-    padding: 30px 15px;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: 600;
+  background-color: #fff;
+  list-style-type: none;
+  border-bottom: 0.5px solid #dadada;
+  padding: 30px 15px;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 600;
 }
 
 /* MADE WITH LOVE BY AL NAHIAN | Portfolio: https://alnahian2003.github.io/me | Behance: https://behance.net/alnahian2003 | Github: https://github.com/alnahian2003 */
 
 .list {
-    margin: 0 20px;
-    width: 90%;
-    overflow-wrap: break-word;
+  margin: 0 20px;
+  width: 90%;
+  overflow-wrap: break-word;
 }
 
 /* Mark & Delete Icon */
 
-.la-check-circle,
+/* Custom Checkbox */
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+    input[type="checkbox"] {
+      --active: #00b800;
+      --active-inner: #fff;
+      --focus: 2px rgba(39, 94, 254, 0.3);
+      --border: #757575;
+      --border-hover: #00b80080;
+      --background: #fff;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      height: 25px;
+      outline: none;
+      display: inline-block;
+      vertical-align: top;
+      position: relative;
+      margin: 0;
+      cursor: pointer;
+      border: 2px solid var(--bc, var(--border));
+      background: var(--b, var(--background));
+      transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+    }
+    input[type="checkbox"]:after {
+      content: "";
+      display: block;
+      left: 0;
+      top: 0;
+      position: absolute;
+      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease),
+        opacity var(--d-o, 0.2s);
+    }
+    input[type="checkbox"]:checked {
+      --b: var(--active);
+      --bc: var(--active);
+      --d-o: 0.3s;
+      --d-t: 0.6s;
+      --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
+    }
+    input[type="checkbox"]:hover:not(:checked):not(:disabled){
+      --bc: var(--border-hover);
+    }
+    input[type="checkbox"]:not(.switch) {
+      width: 25px;
+    }
+    input[type="checkbox"]:not(.switch):after {
+      opacity: var(--o, 0);
+    }
+    input[type="checkbox"]:not(.switch):checked {
+      --o: 1;
+    }
+    input[type="checkbox"]:not(.switch) {
+      border-radius: 50px;
+    }
+    /* The fucking tick mark */
+    input[type="checkbox"]:not(.switch):after {
+      width: 5px;
+      height: 10px;
+      border: 2px solid var(--active-inner);
+      border-top: 0;
+      border-left: 0;
+      left: 7px;
+      top: 2px;
+      transform: rotate(var(--r, 20deg));
+      position: relative;
+    }
+    input[type="checkbox"]:not(.switch):checked {
+      --r: 43deg;
+    }
+    input[type="checkbox"].switch {
+      width: 38px;
+      border-radius: 11px;
+    }
+    input[type="checkbox"].switch:after {
+      left: 2px;
+      top: 2px;
+      border-radius: 50%;
+      width: 15px;
+      height: 15px;
+      background: var(--ab, var(--border));
+      transform: translateX(var(--x, 0));
+    }
+    input[type="checkbox"].switch:checked {
+      --ab: var(--active-inner);
+      --x: 17px;
+    }
+    input[type="checkbox"].switch:disabled:not(:checked):after {
+      opacity: 0.6;
+    }
+/* End Custom Checkbox */
+
 .la-trash-alt {
-    font-size: 32px;
+  font-size: 32px;
 }
 
-
-.mark,
 .delete {
-    width: auto;
-    cursor: pointer;
-}
-
-.mark:hover {
-    color: #00800080;
+  width: auto;
+  cursor: pointer;
 }
 
 .delete:hover {
-    color: #ef0722;
+  color: #ef0722;
+  transition: .5s;
 }
 
 footer {
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    width: 90%;
-    margin: 50px auto;
-    line-height: 1.5;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  width: 90%;
+  margin: 50px auto;
+  line-height: 1.5;
 }
 
 footer a {
-    color: #ef0722;
-    font-weight: 600;
-    text-decoration: none;
+  color: #ef0722;
+  font-weight: 600;
+  text-decoration: none;
 }
 
 /* Temporary Responsive Rules */
+@media (max-width: 575.98px) {
+  .time, .date{
+      font-size: 12px;
+  }
+  .placeholder h4{
+      width: 70%;
+  }
+}
 @media (max-width: 767.98px) {
-    .container {
-        width: 90%;
+    h1{
+        font-size: 40px;
     }
+  .container {
+    width: 90%;
+  }
 
-    .alert {
-        width: 80%;
-        font-size: 16px;
-    }
+  .alert {
+    width: 80%;
+    font-size: 16px;
+  }
 }
 
 /* MADE WITH LOVE BY AL NAHIAN | Portfolio: https://alnahian2003.github.io/me | Behance: https://behance.net/alnahian2003 | Github: https://github.com/alnahian2003 */
